--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -42,5 +42,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./build/libs/${{ steps.get_filename.outputs.file_name }}
-          asset_name: ${{ steps.get_filename.outputs.file_name }}
+          asset_name: ${{ steps.get-filename.outputs.file_name }}
           asset_content_type: application/zip
