--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -20,8 +20,8 @@ jobs:
           cache-name: gradle-files
         with:
           path: ~/.gradle
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
-          restore-keys: ${{ runner.os }}-build-${{ env.cache-name }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('build.gradle.kts') }}
+          restore-keys: ${{ runner.os }}-build-${{ env.cache-name }}-
       - name: gradlew jar
         run: sudo bash ./gradlew jar -Dfile.encoding=UTF-8
       - name: get filename
